--- a/index.html
+++ b/index.html
@@ -12,12 +12,36 @@
 
   <body>
     <!-- Header -->
-    <header></header>
+    <header>
+      <div class="header_wrapper container">
+        <!-- Logo -->
+        <div class="logo">
+          <a href="index.html"
+            ><img src="./assets/index.html/logo.svg" alt="logo"
+          /></a>
+        </div>
+
+        <!-- Navigation -->
+        <div class="navigation">
+          <nav>
+            <ul>
+              <li><a href="#">წიგნები</a></li>
+              <li><a href="#">პროექტის შესახებ</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <!-- Burger Menu Icon -->
+        <div class="burger_menu">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </header>
 
     <!-- Main Content -->
-    <main>
-      <h1>This is a website for library</h1>
-    </main>
+    <main></main>
 
     <!-- Footer -->
     <footer></footer>
