--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
     <!-- Header -->
     <header>
       <div class="header_wrapper container">
-        <!-- Logo -->
-        <div class="logo">
-          <a href="index.html"
-            ><img src="./assets/index.html/logo.svg" alt="logo"
-          /></a>
-        </div>
+        <div class="header_components">
+          <!-- Logo -->
+          <div class="logo">
+            <a href="index.html"
+              ><img src="./assets/index.html/logo.svg" alt="logo"
+            /></a>
+          </div>
 
-        <!-- Navigation -->
-        <div class="navigation">
-          <nav>
-            <ul>
-              <li><a href="#">წიგნები</a></li>
-              <li><a href="#">პროექტის შესახებ</a></li>
-            </ul>
-          </nav>
-        </div>
+          <!-- Navigation -->
+          <div class="navigation">
+            <nav>
+              <ul>
+                <li><a href="#">წიგნები</a></li>
+                <li><a href="#">პროექტის შესახებ</a></li>
+              </ul>
+            </nav>
+          </div>
 
-        <!-- Burger Menu Icon -->
-        <div class="burger_menu">
-          <div></div>
-          <div></div>
-          <div></div>
+          <!-- Burger Menu Icon -->
+          <div class="burger_menu">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
         </div>
       </div>
     </header>
