feature/landing-main
adding main content to the landing page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,250 @@
     </header>
 
     <!-- Main Content -->
-    <main></main>
+    <main>
+      <div class="main-content-wrapper">
+        <div class="search-sort-div">
+          <div class="search-div">
+            <img src="./assets/loop-icon.svg" alt="loop-icon" />
+            <input type="text" />
+          </div>
+          <div class="sort-div">
+            <p>სორტირება</p>
+            <img src="./assets/dropdown-icon.svg" alt="dropdown-icon" />
+          </div>
+        </div>
+        <div class="filter-books-wrapper">
+          <section class="filter-section"></section>
+          <section class="books-section">
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/book-card-img.png"
+                alt="book-cover"
+                class="book-cover"
+              />
+              <div class="book-info">
+                <h2>სახელწოდება</h2>
+                <p>გამომცემლობა</p>
+                <div class="book-additional-info">
+                  <p>2024</p>
+                  <div class="book-views">
+                    <img src="./assets/views-icon.svg" alt="views-icon" />
+                    <p>29</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="pagination-container">
+          <div class="pagination-wrapper">
+            <img src="./assets/pagination-arrow.svg" alt="pagination-arrow" />
+            <p>1</p>
+            <p class="active">2</p>
+            <p>3</p>
+            <img src="./assets/pagination-arrow.svg" alt="pagination-arrow" />
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- Footer -->
     <footer></footer>
