--- a/index.html
+++ b/index.html
@@ -289,7 +289,50 @@
     </main>
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+      <section class="footer-main-info">
+        <div class="container">
+          <div class="contacts-container">
+            <p>კონტაქტი</p>
+            <div class="contacts-wrapper">
+              <div class="contacts">
+                <img src="./assets/phone-icon.svg" alt="phone-icon" />
+                <p>(+995 32) 222 00 09</p>
+              </div>
+              <div class="contacts">
+                <img src="./assets/email-icon.svg" alt="email-icon" />
+                <p>info@iliauni.edu.ge</p>
+              </div>
+              <div class="contacts">
+                <img src="./assets/location-icon.svg" alt="location-icon" />
+                <p>ქაქუცა ჩოლოყაშვილის 3/5</p>
+              </div>
+              <div class="contacts">
+                <img src="./assets/link-icon.svg" alt="link-icon" />
+                <a href="#">https://library.iliauni.edu.ge/</a>
+              </div>
+            </div>
+          </div>
+          <div class="usage-container">
+            <a href="#">კონფიდენციალურობის პოლიტიკა</a>
+            <a href="#">გამოყენების წესები</a>
+          </div>
+          <div class="unilab-team-container">
+            <div class="logo-container">
+              <img src="./assets/iliauni-logo.svg" alt="iliauni-logo" />
+              <img src="./assets/unilab-logo.svg" alt="unilab-logo" />
+            </div>
+            <p>ვებსაიტზე იმუშავა უნილაბის გუნდმა</p>
+          </div>
+        </div>
+      </section>
+      <section class="footer-additional-info">
+        <div class="container">
+          <p>ილიას სახელმწიფო უნივერსიტეტი 2024. ყველა უფლება დაცულია.</p>
+          <img src="./assets/facebook-icon.svg" alt="facebook-icon" />
+        </div>
+      </section>
+    </footer>
 
     <!-- JavaScript link -->
     <script src="./js/script.js"></script>
