--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 
     <!-- Main Content -->
     <main>
+      <div class="landing-photo-wrapper">
+        <img
+          src="./assets/landing-photo.png"
+          alt="landing-photo"
+          class="landing-photo"
+        />
+      </div>
       <div class="main-content-wrapper">
         <div class="search-sort-div">
           <div class="search-div">
