--- a/index.html
+++ b/index.html
@@ -63,7 +63,104 @@
           </div>
         </div>
         <div class="filter-books-wrapper">
-          <section class="filter-section"></section>
+          <section class="filter-section">
+            <button class="filter-clear-button">ფილტრაციის გასუფთავება</button>
+            <section class="dropdown-section">
+              <div class="dropdown-section-wrapper">
+                <div class="dropdown-head">
+                  <p>მედიის ტიპი</p>
+                  <img src="./assets/dropdown-icon.svg" alt="dropdown-icon" />
+                </div>
+                <div class="dropdown-container">
+                  <div class="dropdown">
+                    <div class="dropdown-line"></div>
+                    <label>
+                      წიგნები
+                      <input type="checkbox" name="option1" value="1" />
+                    </label>
+                    <label>
+                      ჟურნალები
+                      <input type="checkbox" name="option2" value="2" />
+                    </label>
+                    <label>
+                      წერილები
+                      <input type="checkbox" name="option3" value="3" />
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="dropdown-section-wrapper">
+                <div class="dropdown-head">
+                  <p>თემები</p>
+                  <img src="./assets/dropdown-icon.svg" alt="dropdown-icon" />
+                </div>
+                <div class="dropdown-container">
+                  <div class="dropdown">
+                    <div class="dropdown-line"></div>
+                    <label>
+                      რომანი
+                      <input type="checkbox" name="option1" value="1" />
+                    </label>
+                    <label>
+                      ავტობიოგრაფია
+                      <input type="checkbox" name="option2" value="2" />
+                    </label>
+                    <label>
+                      პოეზია
+                      <input type="checkbox" name="option3" value="3" />
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="dropdown-section-wrapper">
+                <div class="dropdown-head">
+                  <p>სერიები</p>
+                  <img src="./assets/dropdown-icon.svg" alt="dropdown-icon" />
+                </div>
+                <div class="dropdown-container">
+                  <div class="dropdown">
+                    <div class="dropdown-line"></div>
+                    <label>
+                      რომანი
+                      <input type="checkbox" name="option1" value="1" />
+                    </label>
+                    <label>
+                      ავტობიოგრაფია
+                      <input type="checkbox" name="option2" value="2" />
+                    </label>
+                    <label>
+                      პოეზია
+                      <input type="checkbox" name="option3" value="3" />
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="dropdown-section-wrapper">
+                <div class="dropdown-head">
+                  <p>კოლექცია</p>
+                  <img src="./assets/dropdown-icon.svg" alt="dropdown-icon" />
+                </div>
+                <div class="dropdown-container">
+                  <div class="dropdown">
+                    <div class="dropdown-line"></div>
+                    <label>
+                      რომანი
+                      <input type="checkbox" name="option1" value="1" />
+                    </label>
+                    <label>
+                      ავტობიოგრაფია
+                      <input type="checkbox" name="option2" value="2" />
+                    </label>
+                    <label>
+                      პოეზია
+                      <input type="checkbox" name="option3" value="3" />
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="dropdown-section-wrapper"></div>
+            </section>
+          </section>
           <section class="books-section">
             <div class="card">
               <img
