feature/book-detail-page
add book details page
add fonts
add javascript for book details page

--- a/index.html
+++ b/index.html
@@ -194,222 +194,246 @@
             </section>
           </section>
           <section class="books-section">
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img
-                src="./assets/book-card-img.png"
-                alt="book-cover"
-                class="book-cover"
-              />
-              <div class="book-info">
-                <h2>სახელწოდება</h2>
-                <p>გამომცემლობა</p>
-                <div class="book-additional-info">
-                  <p>2024</p>
-                  <div class="book-views">
-                    <img src="./assets/views-icon.svg" alt="views-icon" />
-                    <p>29</p>
+            </a>
+            <a href="./view/book-details.html">
+              <div class="card">
+                <img
+                  src="./assets/book-card-img.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+                  <h2>სახელწოდება</h2>
+                  <p>გამომცემლობა</p>
+                  <div class="book-additional-info">
+                    <p>2024</p>
+                    <div class="book-views">
+                      <img src="./assets/views-icon.svg" alt="views-icon" />
+                      <p>29</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </a>
           </section>
         </div>
         <div class="pagination-container">
