Active navbar html and css
Changed active and transparent colors in variables. Created an active_header_nav class color white which will be added to active link with javascript. Gave html nav_link class and changed its path to index.html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="navigation">
             <nav>
               <ul>
-                <li><a href="#">წიგნები</a></li>
-                <li><a href="#">პროექტის შესახებ</a></li>
+                <li><a href="./index.html" class="nav_link">წიგნები</a></li>
+                <li><a href="#" class="nav_link">პროექტის შესახებ</a></li>
               </ul>
             </nav>
           </div>
